# Anime_QQBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  NOTICE  README.md  alembic.ini  compose.test.yaml  compose.yaml  pyproject.toml
docs/: deployment.md  operations.md
docs/acceptance/: v0.1.0-rc1.md
docs/superpowers/plans/: 2026-07-15-anime-qq-bot-implementation-plan.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_identity_and_runtime.py  0002_catalog_cache.py  0003_subscriptions.py  0004_schedules_and_notifications.py
scripts/: backup-postgres.sh  container-entrypoint.sh  deploy-acr.sh  restore-postgres.sh
src/anime_qqbot/: __init__.py  clock.py  logging.py  settings.py
tests/: conftest.py
tests/acceptance/: test_compose_config.py  test_deploy_acr_script.py  test_operations_assets.py
tests/contract/: test_bangumi_adapter.py  test_bangumi_data_adapter.py  test_qq_cover_proxy.py  test_qq_official_adapter.py  test_qq_webhook.py
tests/e2e/: test_ambiguous_delivery.py  test_catalog_queries.py  test_fake_qq_gateway.py  test_group_schedule_commands.py  test_manual_redelivery.py  test_query_commands.py  test_scheduled_notification.py  test_scheduled_summary.py  test_subscription_commands.py
tests/integration/: test_catalog_repository.py  test_concurrent_job_claim.py  test_delivery_attempts.py  test_event_deduplication.py  test_identity_constraints.py  test_migrations.py  test_schedule_repository.py  test_subscription_repository.py
tests/unit/: test_clock.py  test_logging.py  test_package.py  test_settings.py
(+86 files in other folders)
